[gd_scene load_steps=4 format=3 uid="uid://dmn26y7rvuuxg"]

[ext_resource type="Script" path="res://Scripts/hand.gd" id="1_50x2t"]
[ext_resource type="Texture2D" uid="uid://dfoamq88myf4h" path="res://Assets/Proba/ruka.png" id="1_6052v"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ow37b"]
size = Vector2(127, 126)

[node name="CharacterBody2D" type="CharacterBody2D"]
script = ExtResource("1_50x2t")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.247554, 0.209949)
texture = ExtResource("1_6052v")

[node name="AttackCooldown" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="CollisionCooldown" type="Timer" parent="."]
wait_time = 0.05
one_shot = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, 0)
shape = SubResource("RectangleShape2D_ow37b")
disabled = true

[connection signal="timeout" from="AttackCooldown" to="." method="_on_attack_cooldown_timeout"]
[connection signal="timeout" from="CollisionCooldown" to="." method="_on_collision_cooldown_timeout"]
